2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: added missing include.

	* app/display/display-enums.[ch]
	* app/dialogs/preferences-dialog.c: changed labels for
	"space-bar-action" preference. Suggestions welcome for further
	improvements.

2006-09-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: reorder includes to avoid preprocessor
	symbol redefinition warnings.

2006-09-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: #define NO_IMPORT_PYGOBJECT, so
	the internal pygobject API symbol is only defined once.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: use coordinates from
	the current device when starting to scroll. Grab the keyboard and
	pointer when panning with the space bar.

2006-09-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/text/gimptextlayout-render.c (gimp_text_layout_render_glyphs): 
	handle tabs correctly, as instructed by behdad.  Fixes
	bug #353132.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: added GUI for "space-bar-action".

2006-09-08  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpperspectiveclone.c (gimp_perspective_clone_motion):
	must not clamp the paint area against the boundary of the
	src_tiles. Various small cleanups.

	* app/paint/gimpsourcecore.[ch] (GimpSourceCore::motion): removed
	src_image parameter.

	Added new virtual function GimpSourceCore::get_source() and moved
	the source PR initialization code to its default implementation.
	(GimpPerspectiveClone will override this method later).

	* app/paint/gimpclone.c (gimp_clone_motion)
	* app/paint/gimpheal.c (gimp_heal_motion): changed accordingly.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/config/gimpdisplayconfig.[ch]
	* app/config/gimprc-blurbs.h
	* app/display/display-enums.[ch]: added new gimprc option